--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sax-protocol",
   "version": "0.0.1",
   "description": "",
-  "main": "truffle-config.js",
+  "main": "hardhat.config.ts",
   "directories": {
     "test": "test"
   },
@@ -19,11 +19,24 @@
     "bignumber.js": "^9.0.1"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.10",
     "@truffle/hdwallet-provider": "^1.0.37",
+    "@openzeppelin/contracts": "^3.2.0",
+    "@types/chai": "^4.2.12",
+    "@types/chai-subset": "^1.3.3",
+    "@types/mocha": "^8.0.2",
+    "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@typechain/ethers-v5": "^1.0.0",
+    "@typechain/truffle-v5": "^2.0.2",
     "braces": "^3.0.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -36,8 +49,21 @@
     "mem": "^5.1.1",
     "solium": "^0.1.3",
     "truffle": "^5.0.42",
-    "ts-node": "^10.4.0",
-    "web3": "^1.2.11"
+    "chai-subset": "^1.6.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "hardhat-contract-sizer": "^2.0.2",
+    "hardhat-deploy": "^0.7.0-beta.30",
+    "hardhat-gas-reporter": "^1.0.1",
+    "moment": "^2.29.1",
+    "prettier": "^2.1.2",
+    "prettier-plugin-solidity": "^1.0.0-alpha.59",
+    "solhint": "^3.2.2",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.12",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7",
+    "web3": "^1.3.3"
   },
   "husky": {
     "hooks": {}
